r61:
+ SVN fix

IrrBP 0.41(r59-r60):
+ FULL Support for Bullet 2.79
+ Updated C::B Project

r58:
+ Added support for VS2010 (Bullet precomp libraries can be downloaded from irrBP download section)
+ Folder re-organization
- Removed support for VS2005 and VS2008

r57:
+ Improved the physic camera, but it stills remain in beta status
+ Added removeConstraint function

r56:
+ Fixes for 0.4 Release

r55:
+ Fixed Physics Camera Node Memory Leaks

r54:
+ Updated Code::Blocks project

r53:
+ Added Follow Animator
+ Added Physic Camera Node (Beta)

r52:
+ Fixed bug in the raycast test functions

r51:
+ Source code cleaned
+ Removed all namespace using in header files [Thanks to Serengeor for the tip]

r50:
+ Fixed some bugs rayCastTest and rayCastClosestHitTest functions
+ Added support in rayCastTest and rayCastClosestHitTest functions to retrieve the collision triangle (included in the collision point structure)

r49:
+ Added rigid body type for future function implementations

r48:
+ Corrected an error in rayCastClosestHitTest function

r47:
+ Added rayCastClosestHitTest function.

r46:
+ Added Bullet Multithread Support, activable by using createMultithreadedBulletManager function instead of createBulletManager [BETA - MEMORY LEAKS PRESENT, use at your own risk]

r45:
+ Added activate function to Rigid Body class, to force body activation.
+ Removed unused pointer from the bullet's rigid body. Unused since CMotionState class introduction.

r44:
+ Modified contactPoint structure
+ Added rayCastTest method in CIrrBPWorld class (beta)

r43:
+ Fixed Code::Blocks Project

IrrBP 0.31-Release (r42):
+ Added 6DOF Constraint
+ New Constructor for the cone twist constraint
+ Improved Slide Constraint
+ LINUX PACKAGE ADDED

IrrBP 0.31 (r41):
+ Fixed linux path issue
+ Created new download package for linux

r40:
+ Fixed setRotation() and getRotation() methods. [issue 4]
+ Fixed body collding test functions. [issue 5]